WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40825
Fix build break in V8ConsoleCustom.cpp
https://bugs.webkit.org/show_bug.cgi?id=40825
Summary
Fix build break in V8ConsoleCustom.cpp
Ben Murdoch
Reported
2010-06-18 04:15:23 PDT
r57505
introduced a build break when ENABLE(JAVASCRIPT_DEBUGGER) is disabled. The profiles attribute is guarded inside the IDL so should be guarded in the cpp also. patch to follow.
Attachments
Patch.
(1.43 KB, patch)
2010-06-18 04:19 PDT
,
Ben Murdoch
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ben Murdoch
Comment 1
2010-06-18 04:19:14 PDT
Created
attachment 59094
[details]
Patch.
WebKit Commit Bot
Comment 2
2010-07-08 11:31:53 PDT
Comment on
attachment 59094
[details]
Patch. Clearing flags on attachment: 59094 Committed
r62807
: <
http://trac.webkit.org/changeset/62807
>
WebKit Commit Bot
Comment 3
2010-07-08 11:31:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug