2010-07-08  Ben Murdoch  <benm@google.com>

Reviewed by Pavel Feldman.

        Fix build break in V8ConsoleCustom.cpp
        https://bugs.webkit.org/show_bug.cgi?id=40825

        No new tests as just fixing a build break.

        * bindings/v8/custom/V8ConsoleCustom.cpp: Guard profilesAccessorGetter
            appropriately.

git-svn-id: svn://svn.chromium.org/blink/trunk@62807 bbb929c8-8fbe-4397-9dbb-9b2b20218538